@@ -68,3 +68,8 @@ parameters: If final scores are within 0.03, pick randomly
 New information from testfiles
 if only obj change -> history reset to 1
 --- 10 jan full ---
+Levelpscost different implementation.
+--- 11 jan full ---
+if only obj change -> history reset to 3
+turn off non performing heuristics after index 15
+print and record presolve and cuts stats
